--- a/VoxEng.Core/VoxEng.Core.csproj
+++ b/VoxEng.Core/VoxEng.Core.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="GlmNet" Version="0.7.0" />
+      <PackageReference Include="Svelto.ECS" Version="3.1.3" />
       <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
       <PackageReference Include="Veldrid" Version="4.8.0" />
       <PackageReference Include="Veldrid.SDL2" Version="4.8.0" />
@@ -14,7 +15,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="ECS" />
+      <Folder Include="ECS\Math" />
     </ItemGroup>
-
 </Project>
