--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -9,4 +9,13 @@
       <ProjectReference Include="..\VoxEng.Core\VoxEng.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ImGui.NET" Version="1.78.0" />
+      <PackageReference Include="Veldrid" Version="4.8.0" />
+      <PackageReference Include="Veldrid.ImGui" Version="5.72.0" />
+      <PackageReference Include="Veldrid.SDL2" Version="4.8.0" />
+      <PackageReference Include="Veldrid.SPIRV" Version="1.0.13" />
+      <PackageReference Include="Veldrid.StartupUtilities" Version="4.8.0" />
+    </ItemGroup>
+
 </Project>
