--- a/VoxEng.Core/VoxEng.Core.csproj
+++ b/VoxEng.Core/VoxEng.Core.csproj
@@ -5,10 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GlmNet" Version="0.7.0" />
+      <PackageReference Include="ImGui.NET" Version="1.78.0" />
       <PackageReference Include="Svelto.ECS" Version="3.1.3" />
       <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
       <PackageReference Include="Veldrid" Version="4.8.0" />
+      <PackageReference Include="Veldrid.ImGui" Version="5.72.0" />
       <PackageReference Include="Veldrid.SDL2" Version="4.8.0" />
       <PackageReference Include="Veldrid.SPIRV" Version="1.0.13" />
       <PackageReference Include="Veldrid.StartupUtilities" Version="4.8.0" />
